--- a/style.css
+++ b/style.css
@@ -1,20 +1,26 @@
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
     font-family: 'poppins', sans-serif;
+    
 }
 body{
     color: #ededed;
     background: #081b29;
+    
+}
+body::-webkit-scrollbar{
+    display: none;
 }
 .header{
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    padding: 20px 10px;
+    padding: 20px 25px;
     background: #051129;
     /* background: #008080; */
     display: flex;
@@ -54,7 +60,6 @@ body{
     width: 100%;
     justify-content: space-between;
     height: 100vh;
-    background:url(./images/Home.png) no-repeat;
     /* background:  #008080; */
     background-size: cover;
     background-position: center;
@@ -64,6 +69,24 @@ body{
 }
 .home-content{
     max-width: 600px;
+}
+.profile{
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
+
+}
+.profile:hover{
+    box-shadow: 0px 0px 25px rgb(15, 217, 244);
+    transition: 0.3s;
+    
+}
+.about-img {
+    width: 400px;
+    height: 400px;
+    border-radius: 50%;
+    margin-left: 50px;
+   
 }
 .home-content h3{
     font-size: 32px;
@@ -146,13 +169,22 @@ body{
     grid-template-columns: repeat(2, 1fr);
     align-items: center;
     gap: 1.5rem;
+    padding-top: 80px;
+    
 }
-.about-img img{
-    padding-bottom: 20%;
+ .about-img img{
+    padding-top: 10px;
+    margin-top: 30px;
+    margin-left: 50px;
     max-width: 630px;
     height: auto;
-    width: 100%;
+   width: 400px;
     border-radius: 8px;
+    
+
+}
+ .about-img img:hover{
+    box-shadow: #0ef;
 }
 .about-text h2{
     font-size: 60px;
@@ -171,7 +203,7 @@ body{
     color: aliceblue;
     font-size: 20px;
     line-height: 1.4;
-    margin-bottom: 4rem
+    margin-bottom: 2rem
 }
 #services{
     color: aliceblue;
@@ -182,19 +214,19 @@ body{
 .sub-title{
     text-align: center;
     font-size: 60px;
-    padding-bottom: 70px;
+   
 }
 .sub-title span{
     color: #0ef;
 }
 .container{
-    padding: 90px;
+    padding: 80px;
 }
 .services-list{
     display: grid;
     grid-template-columns: repeat(auto-fit,minmax(259px,1fr));
     grid-gap: 40px;
-    margin-top: 50px;
+    margin-top: 40px;
 }
 .services-list div{
     background-color: transparent;
@@ -203,7 +235,7 @@ body{
     font-weight: 13px;
     border-right: 10px;
     border-radius: 20px;
-    transition: background 0.5s, transform 0.5s;
+    transition:  0.5s, transform 0.5s;
     box-shadow: 1px 1px 20px #012290f7,
                 1px 1px 40px #0053b8f7;
 }
@@ -464,12 +496,15 @@ section{
 } 
 .main-text{
     padding-top: 130px;
-    margin-top: 200px;
+    margin-top: 100px;
 }
 .main-text h2{
     font-size: 60px;
     line-height: 1;
     text-align: center;
+    position: relative;
+    bottom: 50px;
+    
 }
 .main-text h2 span{
     color: #0ef;
@@ -551,7 +586,8 @@ section{
     align-items: center;
     gap: 3rem;
     padding-left: 30px;
-    margin-top: 130px;
+    
+    padding-top: 100px;
 }
 .contact-text h2{
     font-size: 90px;
@@ -720,5 +756,333 @@ section{
     100% {
         transform: translateY(0px);
         opacity: 1;
+    }
+}
+
+
+
+
+
+
+
+
+
+.heading{
+    text-align: center;
+    font-size: 50px;
+    padding-bottom: 20px;
+    position: relative;
+    left: 400px;
+    padding-top: 80px;
+}
+
+
+.education {
+    background: #081b29;
+    min-height: 90vh;
+  }
+  .education .qoute {
+    font-size: 1.4rem;
+    text-align: center;
+    font-family: "Nunito", sans-serif;
+    font-weight: 400;
+    margin-left: 280px;
+  }
+  .education .box-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 0.1rem;
+  }
+  .education .box-container .box {
+    display: flex;
+    flex-direction: row;
+    width: 70%;
+    border-radius: 0.5rem;
+    box-shadow: 0.2rem 0.5rem 1rem rgba(0, 0, 0, 0.2);
+    text-align: center;
+    position: relative;
+    margin-top: 0.5rem;
+   
+    overflow: hidden;
+    transition: 0.3s;
+    background: #0c2b40;
+    box-shadow:     1rem 0.5rem 1.2rem rgba(0, 0, 0, 0.3);
+    height: 45%;
+  }
+  .education .box-container .box:hover {
+    transform: scale(1.03);
+    box-shadow: 0 0 5px #0ef,
+    0 0 25px #0ef;
+  }
+  .education .box-container .box .image {
+    flex: 1 1 20rem;
+    width: 100%;
+  }
+  .education .box-container .box img {
+    object-fit: cover;
+    position: relative;
+    width: 100%;
+    height: 100%;
+  }
+  .education .box-container .box .content {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+    flex-wrap: wrap;
+    flex: 1 1 70rem;
+  }
+  .education .box-container .box .content h3 {
+    font-size: 2.5rem;
+    color: #024bc8;
+    
+    font-weight: 600;
+    text-align: left;
+    margin: 1rem;
+  }
+  .education .box-container .box .content p {
+    font-size: 1.5rem;
+    margin-left: 0.5rem;
+    text-align: left;
+    
+  }
+  .education h4 {
+    font-size: 1.6rem;
+    color: rgb(36, 109, 2);
+    text-align: left;
+    margin-left:1rem ;
+    font-family: "Nunito", sans-serif;
+    font-weight: 600;
+    
+    margin-top: 1rem;
+
+  }
+  .education .box-container .box .content .h{
+    font-size: 2rem;
+  }
+  
+  .education .box-container .box .content .hii{
+    font-size: 1.5rem;
+    position: relative;
+    right: 37rem;
+    top: 6.5rem;
+   
+
+  }
+  
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  @media screen and (max-width: 600px) {
+    .education .box-container .box {
+      flex-direction: column;
+      width: 100%;
+    }
+    .education .box-container .box .image {
+      width: 100%;
+      height: 25rem;
+    }
+    .education .box-container .box img {
+      width: 100%;
+    }
+    .education .box-container .box .content {
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      padding: 1rem;
+      flex-wrap: wrap;
+      flex: 0;
+    }
+    .education .btns {
+      margin-top: 2rem;
+      margin-left: 1rem;
+      margin-right: 1rem;
+      flex-wrap: wrap;
+    }
+    
+    .heading {
+        text-align: center;
+        font-size: 50px;
+        padding-bottom: 20px;
+        position: relative;
+        left: 50px;
+        padding-top: 80px;
+    }
+    .education .qoute {
+        font-size: 1.4rem;
+        text-align: center;
+        justify-content: center;
+        font-family: "Nunito", sans-serif;
+        font-weight: 400;
+        margin-left: 20px;
+    }
+  }
+
+  /* education media queries ends*/
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* Default styles for larger screens (desktop) are already defined */
+
+/* Medium devices (tablets, 768px and up) */
+@media screen and (max-width: 1024px) {
+    .header {
+        padding: 15px 20px;
+    }
+    .navbar a {
+        font-size: 20px;
+        margin-left: 20px;
+    }
+    .home-content h1 {
+        font-size: 48px;
+    }
+    .home-content p {
+        font-size: 18px;
+    }
+    .about {
+        grid-template-columns: 1fr;
+        text-align: center;
+    }
+    .about-img {
+        margin: 0 auto;
+    }
+    .services-list {
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    }
+    .contact {
+        grid-template-columns: 1fr;
+        text-align: center;
+    }
+}
+
+/* Small devices (phones, 600px and up) */
+@media screen and (max-width: 768px) {
+    .header {
+        flex-direction: column;
+        padding: 10px 15px;
+    }
+    .navbar a {
+        font-size: 18px;
+        margin-left: 10px;
+    }
+    .home-content h1 {
+        font-size: 36px;
+    }
+    .home-content p {
+        font-size: 16px;
+    }
+    .profile {
+        width: 200px;
+        height: 200px;
+    }
+    .about-img {
+        width: 300px;
+        height: 300px;
+    }
+    .services-list {
+        grid-template-columns: 1fr;
+    }
+    .contact-text h2 {
+        font-size: 60px;
+    }
+    .contact-text p {
+        font-size: 16px;
+    }
+}
+
+/* Extra small devices (phones, 480px and below) */
+@media screen and (max-width: 480px) {
+    .header {
+        padding: 5px 10px;
+    }
+    .navbar a {
+        font-size: 16px;
+        margin-left: 5px;
+    }
+    .home-content h1 {
+        font-size: 28px;
+    }
+    .home-content p {
+        font-size: 14px;
+    }
+    .profile {
+        width: 150px;
+        height: 150px;
+    }
+    .about-img {
+        width: 250px;
+        height: 250px;
+    }
+    .services-list {
+        grid-template-columns: 1fr;
+    }
+    .contact-text h2 {
+        font-size: 40px;
+    }
+    .contact-text p {
+        font-size: 14px;
+    }
+    .btn-box, .read {
+        padding: 10px 20px;
+        font-size: 14px;
     }
 }
